--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -1,9 +1,9 @@
 body {
-    background-color: lightblue;
+    background-color: white;
   }
   
   h1 {
-    color: white;
+    color: black;
     text-align: center;
   }
   
