--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,8 @@
     </p>
 
     <p>
-        <b>IMPORTANT:</b> tweets must be written in <b>English</b>.
+        <b>IMPORTANT:</b> tweets must be written in <b>English</b> and old tweets will be removed 
+        if there are more than 10.
     </p>
 
 </div>
